<resources>
    <string name="app_name">704 Safe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_temperature">Temperature</string>
    <string name="menu_gas">Gas</string>
    <string name="menu_actions">Actions</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="gas_graph">Gas Graph</string>
    <string name="temperature_graph">Temperature Graph</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="gas_level">Gas Level</string>
    <string name="humidity_levels">Humidity Levels</string>
    <string name="temperature_levels">Temperature Levels</string>
    <string name="note_values_are_represented_as_8_bit_decimal_numbers_and_not_parts_per_millions_values">Note: Values are represented as 8-bit decimal numbers and not parts per millions values</string>
    <string name="this_application_provides_realtime_measurements_for_natural_gases_temperature_and_humidity_for_inside_and_around_the_home_in_future_development_the_application_will_provide_app_notifications_to_warn_the_user_if_toxic_gases_have_exceeded_healthy_limits">This application provides realtime measurements for natural gases, temperature, and humidity for inside and around the home. In future development, the application will provide app notifications to warn the user if toxic gases have exceeded healthy limits.</string>
    <string name="readme">ReadMe</string>
</resources>

